--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "nodemailer": "^4.6.7",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
+    "react-image-gallery": "^0.8.10",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
     "react-stripe-checkout": "^2.6.3",
